<resources>
    <string name="app_name">MinaProNet VPN</string>
	<string name="vibrate_summary">Vibrate when connection status changes</string>
    <string name="vibrate_title">Vibrate</string>
	<string name="bits_per_second">%.0f bit/s</string>
    <string name="kbits_per_second">%.1f kbit/s</string>
    <string name="mbits_per_second">%.1f Mbit/s</string>
    <string name="gbits_per_second">%.1f Gbit/s</string>
    <string name="volume_byte">%.0f B</string>
    <string name="volume_kbyte">%.1f kB</string>
    <string name="volume_mbyte">%.1f MB</string>
    <string name="volume_gbyte">%.1f GB</string>
	<string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
	<string name="about">About</string>
	<string name="config">Configuration</string>
	<string name="settings">Settings</string>
	<string name="settings_ssh">SSH Settings</string>
	<string name="network_mobile">Mobile network</string>
	<string name="method_connection">Connection Method</string>
	<string name="rate_app">To evaluate</string>
	<string name="feedback">Report Bug</string>
	<string name="first_start_msg">This application was developed for advanced users, keep this in mind when using it.</string>
	<string name="title_login_main">Login Details</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Select</string>
    <string name="default_dir" translatable="false">/sdcard</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Last edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="label_parent_dir" translatable="false">...</string>
	<string name="category_forward_udp">UDP Forwarding</string>
	<string name="title_forward_udp">Forward UDP</string>
	<string name="summary_forward_udp">Redirection was activated for the remote server. If not, UDP wont work.</string>
	<string name="title_resolver_udp">UDP Gateway (Remote)</string>
	<string name="summary_resolver_udp">Pattern (7300)</string>
	<string name="category_forward_dns">DNS Forwarding</string>
	<string name="title_forward_dns">Forward DNS</string>
	<string name="summary_forward_dns">If active, redirect requests to the remote server. If not, DNS will be used by the local system.</string>
	<string name="title_dns_primary">Primary DNS</string>
	<string name="summary_dns_primary">Pattern (1.1.1.1)</string>
	<string name="dialog_message_dns_primary">Enter DNS IP</string>
	<string name="category_advanced_settings">Advanced Settings</string>
	<string name="title_hide_log">Hide Log on Start</string>
	<string name="summary_hide_log">If I activate the log it will not be shown automatically.</string>
	<string name="title_auto_clear_log">Automatically Clear Logs</string>
	<string name="summary_auto_clear_log">If I activate the Records they will be deleted automatically.</string>
	<string name="category_forward_port">Port Forwarding</string>
	<string name="title_mode_debug">Debugging Mode</string>
	<string name="summary_mode_debug">Allows you to see more advanced information in the logs.</string>
	<string name="title_number_max_threads">Maximum number of Threads</string>
	<string name="summary_number_max_threads">The higher the number of Threads, the higher the power consumption and the connection speed on your device.</string>
	<string name="category_filter_apps">App Filter</string>
	<string name="title_filter_apps">Filter Apps</string>
	<string name="title_bypass_mode">Bypass Mode</string>
	<string name="summary_bypass_modo">If active, or traffic from the selected applications will be sent directly.</string>
	<string name="title_apps_list">List of Apps</string>
	<string name="summary_apps_list">Enter one package name per line. Look in Settings -> Apps for the app package name.</string>
	<string name="category_settings_adicionais">Additional Settings</string>
	<string name="title_mode_night">Night Mode (beta)</string>
	<string name="title_ping_time">Ping (seconds)</string>
	<string name="category_user_interface">User Interface</string>
	<string name="title_language">Language</string>
	<string name="category_tunnel">Tunnel</string>
	<string name="ssh_server">Server</string>
	<string name="ssh_port">Port</string>
	<string name="ssh_porta_local">Local Port (Socks5)</string>
	<string name="payload">Connection Text</string>
	<string name="proxy_remote">Proxy Remote</string>
	<string name="proxy_ip">Proxy IP/Host</string>
	<string name="proxy_port">Port</string>
	<string name="proxy_auth">Proxy Authentication</string>
	<string name="proxy_user">User</string>
	<string name="proxy_pass">Password</string>
	<string name="dir_name">Pasta</string>
	<string name="alert_clear_settings">Are you sure to restore the default settings?</string>
	<string name="no_value">Empty</string>
	<string name="blocked">Locked</string>
	<string name="expired">Expired</string>
	<string name="title_delete_file">Exclude File</string>
	<string name="alert_delete_file">Do you want to include this file?</string>
	<string name="dir_home_name">Internal Memory</string>
	<string name="select_file_setting">Select File</string>
	<string name="title_permission_request">Grant Permissions</string>
	<string name="message_permission_request">Please, it is necessary to grant necessary permissions for the application to work properly.</string>
	<string name="show_license">See Licenses</string>
	<string name="name_file">File Name</string>
	<string name="export_button">Export</string>
	<string name="title_security">Security / Lock</string>
	<string name="check_protect">Lock configuration and prevent editing</string>
	<string name="title_extra">Extra</string>
	<string name="check_block_root">Block Root</string>
	<string name="check_show_login_start">Show Login to Start</string>
	<string name="check_date_valid">Set Expiration Date</string>
	<string name="input_note_msg">Message / Note for users (optional)</string>
	<string name="alert_block_settings">Configuration lock does not guarantee 100% security</string>
	<string name="error_empty_name_file">File name must not be empty</string>
	<string name="minimize">Minimize</string>
	<string name="exit">Exit</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="save">Save</string>
	<string name="open">Open</string>
	<string name="more">More</string>
	<string name="cancel">Cancel</string>
	<string name="wait">Wait</string>
	<string name="attention">Attention</string>
	<string name="ok">Ok</string>
	<string name="close">Close</string>
	<string name="open_with">Open With</string>
	<string name="clear_settings">Restore</string>
	<string name="clear_logs">Clear Records</string>
	<string name="settings_ImportExport">Import/Export</string>
	<string name="settings_import">Import Configuration</string>
	<string name="settings_export">Export Configuration</string>
	<string name="actived">Ativate</string>
	<string name="disabled">Deactivate</string>
	 <string name="app_description">MinaProNet VPN VPN is an SSH TUNNEL client, designed to circumvent local blocking and censorship on the network.</string>
	<string name="error_request_permission">You need access to External Storage</string>
	<string name="importing_settings">Importing Configuration</string>
	<string name="log_settings_valid">File valid until: %1$s</string>
	<string name="log_server_banner">Server Message:</string>
	<string name="log_conection_lost">Connection Lost</string>
	<string name="start">Connect</string>
	<string name="stop">Disconnect</string>
	<string name="reconnect">Reconnect</string>
	<string name="stopping_service_ssh">Stopping SSH Service</string>
	<string name="starting_service_ssh">Starting SSH Service</string>
    <string name="stopping_service_ssl">Stopping SSL Service</string>
    <string name="starting_service_ssl">Starting SSL Service</string>
	<string name="title_auth">Authentication</string>
	<string name="auth_message">Complete with SSH account details</string>
	<string name="auth_username">Username</string>
	<string name="password">Password</string>
	<string name="show_password">Show Password</string>
	<string name="save_password">Save Password</string>
	<string name="channel_name_background">Connection statistics</string>
    <string name="channel_description_background">Ongoing statistics of the established SocksHttp connection</string>
    <string name="channel_name_status">Connection status change</string>
    <string name="channel_description_status">Status changes of the SocksHttp connection (Connecting, authenticating,…)</string>
	<string name="channel_name_userreq">User interaction required</string>
    <string name="channel_description_userreq">SocksHttp connection requires a user input, e.g. two factor authentification</string>
	<string name="state_starting">Getting Started</string>
	<string name="state_connecting">Connecting</string>
    <string name="state_wait">Waiting for server response</string>
    <string name="state_auth">Authenticating</string>
	<string name="state_auth_success">Authenticated</string>
    <string name="state_get_config">Getting client configuration</string>
    <string name="state_assign_ip">Assigning IP addresses</string>
    <string name="state_add_routes">Adding routes</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_reconnecting">Reconnecting</string>
    <string name="state_stopping">Stopping</string>
    <string name="state_noprocess">Not running</string>
    <string name="state_resolve">Resolving host names</string>
    <string name="state_tcp_connect">Connected (TCP)</string>
    <string name="state_auth_failed">Authentication failed</string>
    <string name="state_nonetwork">Waiting for network</string>
    <string name="state_waitconnectretry">Waiting %ss seconds between connection attempt</string>
    <string name="state_auth_pending">Waiting for Autentication</string>
    <string name="state_user_vpn_password" translatable="false">Waiting for user VPN password</string>
	<string name="state_user_vpn_permission" translatable="false">Waiting for user permission to use VPN API</string>
	<string name="state_user_vpn_password_cancelled" translatable="false">VPN password input dialog cancelled</string>
    <string name="state_user_vpn_permission_cancelled" translatable="false">VPN API permission dialog cancelled</string>
    <string name="unknown_state">Unknown Status</string>
	<string name="nought_alwayson_warning"><![CDATA[If you did not get a VPN confirmation dialog, you have \"Always on VPN\" enabled for another app. In that case only that app is allowed to connect to a VPN. Check under Settings-> Networks more .. -> VPNS]]></string>
	<string name="no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
    <string name="state_proxy_running">Running proxy</string>
	<string name="state_proxy_inject">Injecting</string>
	<string name="mobile_info">Running on %3$s %1$s (%2$s), Android %5$s API %4$d</string>
	<string name="app_mobile_info">Application Version: %1$s %2$s</string>
	<string name="alert_update_app">Install the latest version</string>
	<string name="error_settings_expired">Expired File</string>
	<string name="error_file_settings_invalid">Invalid Configuration</string>
	<string name="error_file_invalid">Invalid File</string>
	<string name="error_internet_off">Please connect to the internet</string>
	<string name="error_empty_payload">The payload cannot be empty</string>
	<string name="error_empty_settings">Configure correctly to start</string>
	<string name="error_proxy_invalid">Invalid Proxy</string>
	<string name="error_server_ip_invalid">Invalid Server / IP</string>
	<string name="error_root_detected">Locked configuration for devices with root access</string>
</resources>